# Lottery-PZX

./: .gitignore  README.md  db.sql  learn.txt
react/: index.html  package.json  tsconfig.node.json  vite.config.ts
react/src/: App.tsx  index.css
rust/: Cargo.toml
rust/src/: main.rs
